Fixed sidebar width issue on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,33 +11,11 @@
 
   body {
     @apply antialiased min-h-screen min-w-screen text-black bg-white dark:text-white dark:bg-black;
-    @apply text-xs sm:text-sm md:text-base lg:text-lg;
+    @apply text-base lg:text-lg;
   }
 
   main {
     @apply w-full;
-  }
-
-  header {
-    @apply bg-white/70 dark:bg-black/70 fixed z-1;
-    @apply top-0 bottom-auto right-auto p-2 m-2 rounded;
-  }
-
-  nav {
-  }
-
-  nav > ul {
-    @apply flex font-light;
-    @apply space-x-2;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply font-bold text-lg md:text-xl lg:text-2xl;
   }
 
   h1 {
@@ -48,6 +26,10 @@
   }
   h3 {
     @apply text-lg sm:text-xl md:text-2xl;
+  }
+  h4,
+  h5 {
+    @apply font-bold text-xl md:text-2xl lg:text-3xl;
   }
 
   h6 {
